<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.homework222.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_item_1"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_open_subscribe"
        android:orderInCategory="200"
        android:title="@string/menu_item_3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_gallery"
        android:orderInCategory="200"
        android:title="@string/menu_item_4"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_pay"
        android:orderInCategory="200"
        android:title="@string/menu_item_5"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_city"
        android:orderInCategory="200"
        android:title="@string/menu_item_6"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_task"
        android:orderInCategory="200"
        android:title="@string/menu_item_7"
        app:showAsAction="never"/>
</menu>