<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/my_toolbar"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/layout_cont"
        android:divider="@drawable/spacer_medium"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/txt_gallery_result"
            app:srcCompat="@drawable/photo01" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <Button
                android:id="@+id/btn_back"
                style="@style/button"
                android:layout_weight="50"
                android:layout_marginRight="4dp"
                android:text="@string/btn_gallery_back"/>
            <Button
                android:id="@+id/btn_next"
                style="@style/button"
                android:layout_weight="50"
                android:layout_marginLeft="4dp"
                android:text="@string/btn_gallery_next"/>
        </LinearLayout>


        <TextView
            android:id="@+id/text_result"
            style="@style/text_main"
            android:text="" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>