<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/my_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/layout_cont"
        android:divider="@drawable/spacer_medium"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <Button
                android:id="@+id/chooseStartDate"
                style="@style/button"
                android:layout_weight="50"
                android:layout_marginRight="4dp"
                android:text="@string/btn_start" />
            <Button
                android:id="@+id/chooseEndDate"
                style="@style/button"
                android:layout_weight="50"
                android:layout_marginLeft="4dp"
                android:text="@string/btn_end" />
        </LinearLayout>
        <CalendarView
            android:id="@+id/startDateCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <CalendarView
            android:id="@+id/endDateCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btnOK"
            style="@style/button"
            android:text="@string/button_add"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>